--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v2
         with:
@@ -20,6 +20,9 @@ jobs:
         with:
           hugo-version: 'latest'
           # extended: true
+
+      - name: Install dart-sass
+        run: snap install dart-sass
 
       - name: Build
         run: hugo --minify
