--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,5 +39,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         if: github.ref == 'refs/heads/main'
         with:
-          github_token: ${{ secrets.GH_SECRETS }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
