--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,7 +33,7 @@ jobs:
         run: sudo snap install dart-sass
 
       - name: Build
-        run: hugo --minify
+        run: hugo --minify --baseURL https://supragya.github.io/
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
